RESOLVED FIXED79325
REGRESSION: Messages do not go through on groupme.com
https://bugs.webkit.org/show_bug.cgi?id=79325
Summary REGRESSION: Messages do not go through on groupme.com
George Thomas
Reported 2012-02-22 20:53:43 PST
When trying to respond to members of my groupchat on groupme.com, messages do not go through. When I try with firefox it does work.
Attachments
patch (7.77 KB, patch)
2012-03-13 09:50 PDT, Nate Chapin
no flags
Alexey Proskuryakov
Comment 1 2012-02-23 10:28:10 PST
Did this start with a nightly build, or is it broken in Safari 5.1.3, too?
George Thomas
Comment 2 2012-02-23 14:42:39 PST
It works on Safari, but does not work on the nightly build.
Alexey Proskuryakov
Comment 3 2012-02-23 15:08:01 PST
Adele Peterson
Comment 4 2012-03-01 15:18:27 PST
What do you mean by "messages do not go through"? Can you be more specific about the effect?
George Thomas
Comment 5 2012-03-01 23:03:11 PST
If i type in a response to a chat on groupme when chatting with my groups the message i send doesn't go through, but when i use firefox or safari it does go through. Does that make sense? It's kind of like a chat client, just my chat messages fail to go through when using webkit. George
Oliver Hunt
Comment 6 2012-03-05 11:21:11 PST
Apparently this was regressed by https://bugs.webkit.org/show_bug.cgi?id=76564
Alexey Proskuryakov
Comment 7 2012-03-08 17:06:15 PST
Nate, did you have a chance to check what causes this?
Nate Chapin
Comment 8 2012-03-09 08:32:55 PST
(In reply to comment #7) > Nate, did you have a chance to check what causes this? Will try to do so today.
Nate Chapin
Comment 9 2012-03-09 12:02:51 PST
(In reply to comment #8) > (In reply to comment #7) > > Nate, did you have a chance to check what causes this? > > Will try to do so today. Does anyone have a test account for groupme that I could borrow? I'd rather not use my personal mobile phone, and I don't have a work/test one handy. Alternatively, I can try to contact groupme and see if they can set me up with a test account.
Nate Chapin
Comment 10 2012-03-09 12:40:12 PST
(In reply to comment #9) > (In reply to comment #8) > > (In reply to comment #7) > > > Nate, did you have a chance to check what causes this? > > > > Will try to do so today. > > Does anyone have a test account for groupme that I could borrow? I'd rather not use my personal mobile phone, and I don't have a work/test one handy. > > Alternatively, I can try to contact groupme and see if they can set me up with a test account. Got an account. Haven't immediately been able to repro, but still looking.
Nate Chapin
Comment 11 2012-03-09 13:09:05 PST
(In reply to comment #10) > (In reply to comment #9) > > (In reply to comment #8) > > > (In reply to comment #7) > > > > Nate, did you have a chance to check what causes this? > > > > > > Will try to do so today. > > > > Does anyone have a test account for groupme that I could borrow? I'd rather not use my personal mobile phone, and I don't have a work/test one handy. > > > > Alternatively, I can try to contact groupme and see if they can set me up with a test account. > > Got an account. Haven't immediately been able to repro, but still looking. Still no luck reproducing. Did you do anything specific before the messages stopped appearing? E.g., repeating the same message multiple times, reloading, etc? I wondered if this might have been the same cause as https://bugs.webkit.org/show_bug.cgi?id=80551, but I've yet to reproduce with or without the fix for that issue.
Nate Chapin
Comment 12 2012-03-09 13:31:56 PST
(In reply to comment #11) > (In reply to comment #10) > > (In reply to comment #9) > > > (In reply to comment #8) > > > > (In reply to comment #7) > > > > > Nate, did you have a chance to check what causes this? > > > > > > > > Will try to do so today. > > > > > > Does anyone have a test account for groupme that I could borrow? I'd rather not use my personal mobile phone, and I don't have a work/test one handy. > > > > > > Alternatively, I can try to contact groupme and see if they can set me up with a test account. > > > > Got an account. Haven't immediately been able to repro, but still looking. > > Still no luck reproducing. Did you do anything specific before the messages stopped appearing? E.g., repeating the same message multiple times, reloading, etc? > > I wondered if this might have been the same cause as https://bugs.webkit.org/show_bug.cgi?id=80551, but I've yet to reproduce with or without the fix for that issue. Ah, I think I get it now. Sending a message with ToT WebKit makes it appear locally, but if you have the chat open in another window, it won't appear.
Nate Chapin
Comment 13 2012-03-13 09:50:59 PDT
Alexey Proskuryakov
Comment 14 2012-03-13 10:32:01 PDT
It is surprising that this is the fix for this bug if the recession happened in r108576. I'm sure that you tested that this helps, but I'm curious about the mechanics. Does this fix also address bug 80764?
Alexey Proskuryakov
Comment 15 2012-03-13 10:32:22 PDT
> recession Thank you autocorrection :)
Nate Chapin
Comment 16 2012-03-13 10:41:59 PDT
(In reply to comment #14) > It is surprising that this is the fix for this bug if the recession happened in r108576. > > I'm sure that you tested that this helps, but I'm curious about the mechanics. Did it really work between 107859 and 108576? I would be surprised, but the loader has produced stranger bugs. As it stands now, we can make a GET request to a url, then a POST, and the MemoryCache will still try treat it as a cache hit. That was the problem I saw on groupme, but maybe there was more than one. > > Does this fix also address bug 80764? I suspect so, since I think this is the fix I should have been making in the first place. I can mark that and probably some others as dupes, or I can use those bugs as an excuse to improve test coverage (I'm inclined toward the latter).
Alexey Proskuryakov
Comment 17 2012-03-13 10:45:57 PDT
> Did it really work between 107859 and 108576? I would be surprised, but the loader has produced stranger bugs. Looking at our testing notes more carefully, it's unclear why we decided that this regressed in r108576. Probably a regression from r107672 indeed.
WebKit Review Bot
Comment 18 2012-03-13 14:18:43 PDT
Comment on attachment 131643 [details] patch Clearing flags on attachment: 131643 Committed r110608: <http://trac.webkit.org/changeset/110608>
WebKit Review Bot
Comment 19 2012-03-13 14:18:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.