Source/WebCore: Rework how a CachedRawResource decides if it can be reused for a given ResourceRequest. Ensure method, body, cookie policy, and all headers match. http://bugs.webkit.org/show_bug.cgi?id=79325

Reviewed by Oliver Hunt.

Test: http/tests/cache/xhr-body.html

* loader/cache/CachedRawResource.cpp:
(WebCore::CachedRawResource::canReuse):
* loader/cache/CachedRawResource.h: Take a ResourceRequest in canReuse().
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy): Remove Range header
    check, since it is now redundant.

LayoutTests: Test for http://bugs.webkit.org/show_bug.cgi?id=79325.

Reviewed by Oliver Hunt.

* http/tests/cache/resources/body.php: Added.
* http/tests/cache/xhr-body-expected.txt: Added.
* http/tests/cache/xhr-body.html: Added.


Canonical link: https://commits.webkit.org/98184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110608 268f45cc-cd09-0410-ab3c-d52691b4dbfc