LayoutTests/http/tests/cache/resources/body.php
@@ -1,0 +1,4 @@
+<?php
+header('Etag: 123456789');
+echo file_get_contents('php://input');
+?>
